FlightPath 5.x Changelog
========================

2017-06-30
  Large overhaul to the degree edit screen.  In addition to being 100% FAPI now, you can add new
  semester blocks on demand, rather than having to save and refresh the page for more.  You can
  also delete a semester block.  Also, when a new degree is created, the first four semester blocks
  are created by default.  
  

2017-06-27
  Fixed bug where form parameters not being stored as hidden variables in the form were causing
  the $form_state['values'] to be incomplete.  Specifically on the degree edit form.


2017-06-21
  Made it to where if the SESSION var "scroll_top" is set, the value will be respected.  This allows
  FAPI forms to set the scroll top (like the degree edit form)


2017-06-19
  Tweaked the reduce_whitespace function to make it slightly smarter.
  
  Working on new FormAPI form for editing degrees.
  

2017-06-17
  Fixed bug where remainder hours on a split substitution were showing as the full hours
  in Excess credit.


2017-04-21
  Added a new behavior to when FlightPath saves advising session from POST.  Instead of
  simply continuing execution, it can now reload the page via fp_goto().  This prevents
  certain bugs from appearing if the user hits "Refresh" on the browser, causing the
  POST to submit again.  


2017-03-27
  Fixed a bug where substitutions and moved courses were not showing up correctly
  immediately after changing a degree option (like adding or removing a track).  This
  was due to the FlightPath object not using the same reference to the student object
  after a non-cache load.
  
  Fixed an issue where hooks could not always be invoked from hook_init.  This was
  because hook_init was being called as soon as the module was loaded.  Instead, the logic
  was changed so that all modules are loaded first, THEN hook_init is called.


2017-03-15
  Fixed another bug where courses worth zero hours were not showing up in lists correctly.
  

2017-03-14